fix #92 - one line collapsed bodies

--- a/h/sass/app.scss
+++ b/h/sass/app.scss
@@ -493,7 +493,7 @@ svg { -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
   }
 
   .hyp-collapsed {
-    .hyp-body {
+    .hyp-content {
       overflow: hidden;
       text-overflow: ellipsis;
       -o-text-overflow: ellipsis;
